// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  className="CardDragHandle"
  data-test-id="cf-ui-card-drag-handle"
>
  <Icon
    color="muted"
    icon="Drag"
    size="small"
    testId="cf-ui-icon"
  />
  <span
    className="CardDragHandle__sr-label"
  >
    CardDragHandle
  </span>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  className="CardDragHandle my-extra-class"
  data-test-id="cf-ui-card-drag-handle"
>
  <Icon
    color="muted"
    icon="Drag"
    size="small"
    testId="cf-ui-icon"
  />
  <span
    className="CardDragHandle__sr-label"
  >
    CardDragHandle
  </span>
</div>
`;

exports[`renders the component with isDragActive prop set to true 1`] = `
<div
  className="CardDragHandle CardDragHandle--drag-active"
  data-test-id="cf-ui-card-drag-handle"
>
  <Icon
    color="muted"
    icon="Drag"
    size="small"
    testId="cf-ui-icon"
  />
  <span
    className="CardDragHandle__sr-label"
  >
    CardDragHandle
  </span>
</div>
`;
